[package]
name = "crypto-rsl"
version = "0.1.0"
authors = ["XS <tonycody@qq.com>"]
license = "Apache-2.0"
homepage = "https://github.com/xs-fork/rust-crypto/"
repository = "https://github.com/xs-fork/rust-crypto/"
description = "A (mostly) pure-Rust implementation of various common cryptographic algorithms."
keywords = [ "Crypto", "MD5", "Sha1", "Sha2", "AES" ]
readme = "README.md"
build = "build.rs"

[lib]
name = "crypto"

[features]
with-bench = []

[build-dependencies]
gcc = "^0.3"

[dependencies]
libc = "^0.2"
time = "^0.1"
rand = "^0.3"
rustc-serialize = "^0.3"
